--- a/Homework_18/site (pug)/views/contacts.pug
+++ b/Homework_18/site (pug)/views/contacts.pug
@@ -34,7 +34,7 @@ block content
             script.
                 var form = document.getElementsByTagName('form')[0];
                 console.log( form );
-                form.action = 'sendEmail'
+                form.action = 'contacts'
                 form.onsubmit = function() {
                 var check = true;
                 var inputs = document.getElementsByTagName('input');
