--- a/Homework_18/site (pug)/views/header.pug
+++ b/Homework_18/site (pug)/views/header.pug
@@ -3,7 +3,7 @@ html(lang='ru')
     head
         meta(charset='UTF-8')
         title= title
-        link(href="common.css", rel="stylesheet")
+        link(href="/common.css", rel="stylesheet")
     body
         div(id='main')
             div(id='menu')
@@ -11,5 +11,5 @@ html(lang='ru')
                 a(class='menu') О нас
                 a(class='menu') Контакты
                 a(class='menu') Добавить пост
-            script(src="menu.js")
+            script(src="/menu.js")
             block content
