--- a/Homework_18/classwork/views/edit.pug
+++ b/Homework_18/classwork/views/edit.pug
@@ -5,7 +5,7 @@ block content
 
     form(method='post')
         fieldset.form-group
-            label(for-'name') Name:
+            label(for='name') Name:
             input.form-control(name='name', type="text", placeholder="Введите имя курса", value=course.name)
             small.text-muted Добавьте свой новый курс.
         button.btn.btn-primary(type='submit') Сохранить курс
