--- a/Homework_23/crm_classwork/views/layouts/footer.ejs
+++ b/Homework_23/crm_classwork/views/layouts/footer.ejs
@@ -1,5 +1,5 @@
                 <div class="footer">
-                    <img src="/../../public/img/logo.png">
+                    <img src="/../img/logo.png" onclick="window.location.href = 'http://localhost:3000';">
                 </div>
     </div>
 </body>
