--- a/Homework_23/crm_classwork/views/add_customer.ejs
+++ b/Homework_23/crm_classwork/views/add_customer.ejs
@@ -1,4 +1,4 @@
-<%= include layouts/header.ejs %>
+<%- include layouts/header.ejs %>
 <form method="post" action="/customers/add/" class="col-md-4">
     <div class="form-group">
         <label for="name">Имя</label>
@@ -16,7 +16,7 @@
         <label for="exampleInputEmail1">Телефон</label>
         <input class="form-control" id="exampleInputEmail1" placeholder="телефон" type="text" name="phone"  required>
     </div>
-    <button type="submit" class="btn btn-default" name="submit" value="Save" >Изменить</button>
+    <button type="submit" class="btn btn-default" name="submit" value="Save" >Добавить</button>
     <button type="submit" class="btn btn-default" name="cancel" value="Cancel" onclick="window.location.href = '/customers';">Отменить</button>
 </form>
-<%= include layouts/footer.ejs%>
+<%- include layouts/footer.ejs %>
