--- a/Homework_23/crm_classwork/views/edit_customer.ejs
+++ b/Homework_23/crm_classwork/views/edit_customer.ejs
@@ -1,4 +1,4 @@
-<%= include layouts/header.ejs %>
+<%- include layouts/header.ejs %>
 <form method="post" action="/customers/edit/<%= data[0].id %>">
     <div class="form-group">
         <label for="name">Имя</label>
@@ -6,7 +6,7 @@
     </div>
     <div class="form-group">
         <label for="name">Адрес</label>
-        <textarea class="form-control" rows="3" name="address" required cols="<%= data[0].address %>"></textarea>
+        <textarea class="form-control" rows="3" name="address" required cols=""><%= data[0].address %></textarea>
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">e-mail</label>
@@ -17,6 +17,6 @@
         <input class="form-control" id="exampleInputEmail1" placeholder="телефон" type="text" name="phone" value="<%= data[0].phone %>" required>
     </div>
     <button type="submit" class="btn btn-default" name="submit" value="Save" >Изменить</button>
-    <button type="submit" class="btn btn-default" name="cancel" value="Cancel" onclick="window.location.href = '/customers';">Отменить</button>
+    <button type="reset" class="btn btn-default" name="cancel" value="Cancel" onClick="window.location.href = '/customers';">Отменить</button>
 </form>
-<%= include layouts/footer.ejs%>
+<%- include layouts/footer.ejs%>
