--- a/Angular/Homework_35/Calculator/src/app/app.component.html
+++ b/Angular/Homework_35/Calculator/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-operand [value]="value" (change) = "onInputChange( $event )"></app-operand>
-<app-sign></app-sign>
+<app-sign [sign]="sign" (input)="OnSignChange( $event )" ></app-sign>
