--- a/Angular/Homework_35/Calculator/src/app/app.component.html
+++ b/Angular/Homework_35/Calculator/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-operand [value]="value" (change) = "value = $event.target.value"></app-operand>
-<app-sign [sign]="sign" (input) = "sign = $event.target.value"></app-sign>
-<p>operand = {{value}}</p>
-<p>sign = {{sign}}</p>
+<ng-template ngFor let-value [ngForOf] = "values" let-i = "index">
+    <app-operand [value]="value" (change) = "values[i] = $event.target.value"></app-operand>
+    <app-sign [sign]="sign[i]" (input) = "sign[i] = $event.target.value"
+        *ngIf = "(values.length - 1) > i" defaultValue = "1"></app-sign>
+</ng-template>
+
+<button (click) = "test()">cons</button>
