--- a/Angular/Homework_35/Calculator/src/app/app.component.html
+++ b/Angular/Homework_35/Calculator/src/app/app.component.html
@@ -3,5 +3,5 @@
     <app-sign [sign]="sign[i]" (input) = "sign[i] = $event.target.value"
         *ngIf = "(values.length - 1) > i" defaultValue = "1"></app-sign>
 </ng-template>
-
+<app-result [result]="result"></app-result>
 <button (click) = "test()">cons</button>
