--- a/Angular/Homework_35/Calculator/src/app/app.component.html
+++ b/Angular/Homework_35/Calculator/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-template ngFor let-value [ngForOf] = "values" let-i = "index">
     <app-operand [value]="value" (change) = "values[i] = $event.target.value"></app-operand>
-    <app-sign [sign]="sign[i]" (input) = "sign[i] = $event.target.value"
-        *ngIf = "(values.length - 1) > i" defaultValue = "1"></app-sign>
+    <app-sign [sign]="signs[i]" (input) = "signs[i] = $event.target.value"
+              *ngIf = "(values.length - 1) > i" defaultValue = "1"></app-sign>
 </ng-template>
 <app-result [result]="result"></app-result>
-<button (click) = "test()">cons</button>
+<button (click) = "transformData()">cons</button>
