--- a/Angular/Homework_36/ToDoList/src/app/list/list.component.html
+++ b/Angular/Homework_36/ToDoList/src/app/list/list.component.html
@@ -1,3 +1,6 @@
-<p>
-  list works!
-</p>
+<tr>
+  <td>{{index}}.</td>
+  <td>{{name}}</td>
+  <td>{{status}}</td>
+  <td><img class="cancel" src="boton-cancelacion.png" (click)="remove.emit( index - 1 )"></td>
+</tr>
