--- a/Angular/Homework_36/ToDoList/src/app/app.component.html
+++ b/Angular/Homework_36/ToDoList/src/app/app.component.html
@@ -1,7 +1,9 @@
 <table>
     <h2>To Do List</h2>
-    <app-list *ngFor = "let item of list; index as i"
+    <tr *ngFor = "let item of list; index as i" >
+        <app-list
             [index]="i + 1" [name]="item.name" [status]="item.status"
             (remove)="removeItem( $event )"  ></app-list>
+    </tr>
 </table>
 
