add features to component Input

--- a/Angular/Homework_36/ToDoList/src/app/app.component.html
+++ b/Angular/Homework_36/ToDoList/src/app/app.component.html
@@ -6,4 +6,4 @@
             (remove)="removeItem( $event )"  ></app-list>
     </tr>
 </table>
-
+<app-input [status]="status" (addElement)="addItem( $event )" ></app-input>
