--- a/Angular/Homework_36/ToDoList/src/app/list/list.component.html
+++ b/Angular/Homework_36/ToDoList/src/app/list/list.component.html
@@ -1,4 +1,4 @@
 <td>{{index}}.</td>
-<td>{{name}}</td>
-<td>{{status}}</td>
+<td class="beauty">{{name}}</td>
+<td class="beauty">{{status}}</td>
 <td><img class="cancel" src="boton-cancelacion.png" (click)="remove.emit( index - 1 )"></td>
