--- a/Angular/Homework_36/ToDoList/src/app/app.component.html
+++ b/Angular/Homework_36/ToDoList/src/app/app.component.html
@@ -1,6 +1,6 @@
 <table>
     <h2>To Do List</h2>
-    <tr *ngFor = "let item of list; index as i" >
+    <tr *ngFor = "let item of list; index as i" [appChangeStatus] = "status">
         <app-list
             [index]="i + 1" [name]="item.name" [status]="item.status"
             (remove)="removeItem( $event )"  ></app-list>
