--- a/Angular/Homework_36/ToDoList/src/app/input/input.component.html
+++ b/Angular/Homework_36/ToDoList/src/app/input/input.component.html
@@ -1,12 +1,12 @@
 <div>
   <input type="text" [value] = "inputValue"
-         (change)="inputValue = $event.target.value">
+         (change)="inputValue = $event.target.value; toggleDisableButton()">
   <select name="status" id="" [value] = "elemStatus"
-          (change)="elemStatus = $event.target.value">
+         (change)="elemStatus = $event.target.value; toggleDisableButton()">
     <option disabled>Статус</option>
     <option *ngFor="let item of status; index as i"
             [value]="item.condition">{{item.condition}}</option>
   </select>
-  <button (click)="addElementToList()">Add</button>
+  <button [disabled] = "buttonDisable" (click)="addElementToList()">Add</button>
 </div>
 
