--- a/Angular/Routes/Version1/src/app/navigation/navigation.component.html
+++ b/Angular/Routes/Version1/src/app/navigation/navigation.component.html
@@ -1,3 +1,6 @@
-<p>
-  navigation works!
-</p>
+<div>
+  <div class = "str"><a href="/main">Главная</a></div>
+  <div class = "str"><a href="/users">Пользователи</a></div>
+  <div class = "str"><a href="/contacts">Контакты</a></div>
+  <div class = "str"><a href="/basket"><img src="http://s1.iconbird.com/ico/2013/9/430/w256h2561378622383catcart2.png" alt="Basket" width="20px" height="20px"></a></div>
+</div>
