map Bug, add UserInfo component

--- a/Angular/Routes/Version1/src/app/users/users.component.html
+++ b/Angular/Routes/Version1/src/app/users/users.component.html
@@ -3,6 +3,9 @@
     <li *ngFor = "let aUser of users; index as i">
       {{aUser.id}} - {{aUser.name}} - {{aUser.surname}} - {{aUser.email}}
       <button (click) = "deleteUser( aUser.id )">Delete</button>
+      <!--
+      <button (click)="">Tnfo</button>
+    -->
     </li>
   </ul>
 </div>
