add button to user-info

--- a/Angular/Routes/Version1/src/app/user-info/user-info.component.html
+++ b/Angular/Routes/Version1/src/app/user-info/user-info.component.html
@@ -1,3 +1,5 @@
 <p>
   {{aUser.id}} - {{aUser.name}} - {{aUser.surname}} - {{aUser.email}}
+  <button (click)="userDelete">Delete</button>
+  <button routerLink = "../">Back</button>
 </p>
