--- a/Angular/Routes/Version1/src/app/user-info/user-info.component.html
+++ b/Angular/Routes/Version1/src/app/user-info/user-info.component.html
@@ -1,5 +1,5 @@
 <p>
   {{aUser.id}} - {{aUser.name}} - {{aUser.surname}} - {{aUser.email}}
-  <button (click)="userDelete">Delete</button>
+  <button (click)="deleteUser()" routerLink = "../" >Delete</button>
   <button routerLink = "../">Back</button>
 </p>
