--- a/Angular/Routes/Version1/src/app/users/users.component.html
+++ b/Angular/Routes/Version1/src/app/users/users.component.html
@@ -3,7 +3,7 @@
     <li *ngFor = "let aUser of users; index as i">
       {{aUser.id}} - {{aUser.name}}
       <button (click) = "deleteUser( aUser.id )">Delete</button>
-      <button routerLink = "/users/{{i}}">Info</button>
+      <button routerLink = "/users/{{ aUser.id }}">Info</button>
     </li>
   </ul>
 </div>
