connected component Sign

--- a/Angular/Homework_38/calc2/src/app/calc/calc.component.html
+++ b/Angular/Homework_38/calc2/src/app/calc/calc.component.html
@@ -1,7 +1,8 @@
 <input type="range" min = "minLength" max="maxLength" [value] = "calcLength" (change)="setCurrentLength( $event )">
 <div *ngFor="let aValue of values; index as i">
   <app-sign *ngIf = " i > 0 "
-                 [sign] =  "signs[i]"></app-sign><br/>
-  <app-operand [aValue] = "values[i]" [index] = "i"
-               (changeEvent) = "addCurrentValue( $event )" ></app-operand>
+                 (signInput) = "addCurrentSign( $event )"
+                 [sign] =  "signs[i - 1]" [index] = "i - 1" ></app-sign><br/>
+  <app-operand [aValue] = "values[i]"     [index] = "i"
+               (changeEvent) = "addCurrentValue( $event )"></app-operand>
 </div>
