--- a/Angular/Homework_38/calc2/src/app/sign/sign.component.html
+++ b/Angular/Homework_38/calc2/src/app/sign/sign.component.html
@@ -1,1 +1,2 @@
-<input name = "sign" placeholder="sign" [value] = "sign" >
+<input name = "sign" placeholder="sign" [value] = "sign"
+        (input) = "onSignInput( $event )">
