completed first line on features

--- a/Angular/Homework_38/calc2/src/app/calc/calc.component.html
+++ b/Angular/Homework_38/calc2/src/app/calc/calc.component.html
@@ -6,6 +6,6 @@
   <app-operand [aValue] = "values[i]"     [index] = "i"
                (changeEvent) = "addCurrentValue( $event )"></app-operand>
 </div>
-<button (click)="calculateCurrentResultEval()">Calculate</button>
-<button>Clear</button>
-<app-result-eval [result]="result" ></app-result-eval>
+<app-result [result]="result"
+      (onBtnResultClick) = "calculateCurrentResultEval()"
+      (onBtnClearClick) = "clearCurrentData()"></app-result>
