--- a/Angular/Homework_38/calc2/src/app/result/result.component.html
+++ b/Angular/Homework_38/calc2/src/app/result/result.component.html
@@ -1,3 +1,5 @@
+<button (click)="onResultBtnClick()">Calculate</button>
+<button (click)="onClearBtnClick()">Clear</button>
 <p>
   {{result}}
 </p>
