--- a/Angular/Homework_38/calc2/src/app/calc-func/calc-func.component.html
+++ b/Angular/Homework_38/calc2/src/app/calc-func/calc-func.component.html
@@ -6,5 +6,5 @@
                  *ngIf = "i === 0"></app-sign-func>
 </div>
 <app-result [result]="result"
-  (onBtnResultClick) = "getCurrentResult()"
+  (onBtnResultClick) = "calculateResult()"
    (onBtnClearClick) = "clearCurrentData()"></app-result>
