--- a/Angular/Docs/Guides/Forms/formsWork/src/app/hero-form/hero-form.component.html
+++ b/Angular/Docs/Guides/Forms/formsWork/src/app/hero-form/hero-form.component.html
@@ -1,3 +1,36 @@
-<p>
-  hero-form works!
-</p>
+{{diagnostic}}
+<div class = "container">
+  <h1>Hero Form</h1>
+  <form #heroForm = "ngForm">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" required
+        [(ngModel)] = "model.name" name="name"
+        #name = "ngModel">
+      <!-- #spy-->
+
+      <div [hidden]="name.pristine || name.valid"
+           class="alert alert-danger">
+        Name is required
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="alterEgo">Alter Ego</label>
+      <input type="text" class="form-control" id="alterEgo"
+             [(ngModel)] = "model.alterEgo" name="alterEgo">
+    </div>
+
+    <div class="form-group">
+      <label for="power">Hero Power</label>
+      <select name="power" id="power" class="form-control" required
+              [(ngModel)] = "model.power" name="power">
+        <option *ngFor="let pow of powers"
+                [value]="pow">{{pow}}</option>
+      </select>
+    </div>
+
+
+    <button type="submit" class="btn btn-success">Submit</button>
+  </form>
+</div>
