--- a/Angular/Homework_38/calc2/src/app/result/result.component.html
+++ b/Angular/Homework_38/calc2/src/app/result/result.component.html
@@ -1,5 +1,9 @@
-<button (click)="onResultBtnClick()">Calculate</button>
+<button type="submit" >Calculate</button>
 <button (click)="onClearBtnClick()">Clear</button>
 <p>
   {{result}}
 </p>
+
+<!--
+(click)="onResultBtnClick()"
+-->
