--- a/Angular/Homework_38/calc2/src/app/calc/calc.component.html
+++ b/Angular/Homework_38/calc2/src/app/calc/calc.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit) = "onSubmit()" #calc = "ngForm">
+<form (ngSubmit) = "onSubmit( form )" #form = "ngForm">
   <input type="range" min = "minLength" max="maxLength" [value] = "calcLength" (change)="setCurrentLength( $event )">
   <div *ngFor="let aValue of values; index as i">
     <app-sign *ngIf = " i > 0 "
@@ -8,6 +8,9 @@
             (changeEvent) = "addCurrentValue( $event )"></app-operand>
   </div>
   <app-result [result]="result"
-        (onBtnResultClick) = "calculateCurrentResultEval()"
         (onBtnClearClick) = "clearCurrentData()"></app-result>
 </form>
+
+<!--
+(onBtnResultClick) = "onSubmit( form )"
+-->
