add styles and bug fix

--- a/Angular/Homework_38/calc2/src/app/calc-func/calc-func.component.html
+++ b/Angular/Homework_38/calc2/src/app/calc-func/calc-func.component.html
@@ -7,7 +7,7 @@
                    *ngIf = "i === 0"></app-sign-func>
   </div>
   <app-result [result]="result"
-              (onBtnClearClick) = "clearCurrentData()"></app-result>
+              (onBtnClearClick) = "clearCurrentData( form )"></app-result>
 </form>
 
 <!--
