--- a/Angular/Homework_38/calc2/src/app/switch/switch.component.html
+++ b/Angular/Homework_38/calc2/src/app/switch/switch.component.html
@@ -2,8 +2,8 @@
   <div>
     <img src="https://womanadvice.ru/sites/default/files/imagecache/width_250/kak_vyglyadit_ray_i_ad.jpg" alt="Heaven and hell">
     <div>
-      <div class="butt"><a href="/Hell">Hell</a></div>
-      <div class="butt"><a href="/Heaven">Heaven</a> </div>
+      <div class="butt" routerLinkActive="active"><a routerLink="/Hell">Hell</a></div>
+      <div class="butt" routerLinkActive="active"><a routerLink="/Heaven">Heaven</a> </div>
     </div>
   </div>
   <router-outlet></router-outlet>
